--- a/Homework_4/PyCitySchools/AcademyOfPy.ipynb
+++ b/Homework_4/PyCitySchools/AcademyOfPy.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PyCity Schools Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* It's expected that schools with bigger budgets perform better because they can afford more resources and therefore, attract better teachers. That may be the case in some schools, but it's not guaranteed. The data shows that those schools that have a per student budget of \\$614 or less performed better than those that spent between \\$615 and \\$675 per student. Although the average math and reading scores are not significantly better, the % of students with passing grades for math and reading is. \n",
+    "* I expected to see the average math and reading scores vary by grade, but although they vary by school, they stay pretty consistent, grade by grade. This data point is interesting, but not significant.\n",
+    "* Another assumption most people make is that smaller schools perform better. This data actually backs up that assumption.  The passing rates for schools with less than 2000 students is significantly better, even though the average math and reading scores are similar. The 4 of the top 5 performing schools have fewer than 2000 students, whereas the bottom 5 performing schools have more than 2000 students. All 5 of the top 5 schools are charter and all 5 of the bottom 5 schools are district. It's hard to say with this current analysis whether charter schools perform better because they're a charter school or because they have fewer students. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +541,7 @@
        "Wright High School             96.611111               94.972222  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +700,7 @@
        "Wilson High School        93.867718          96.539641               95.203679  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +864,7 @@
        "Ford High School                    73.804308  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1060,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1253,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1407,7 @@
        "\\$645 - $675                                73.649382  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1445,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1543,7 @@
        "Large (2000-5000)           82.766634               76.364998  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1636,7 @@
        "District             80.799062               73.673757  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,18 +1647,6 @@
     "                           \"% Overall Passing Rate\"]]\n",
     "school_type"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
