--- a/Homework_4/PyCitySchools/AcademyOfPy.ipynb
+++ b/Homework_4/PyCitySchools/AcademyOfPy.ipynb
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>School ID</th>\n",
        "      <th>School Type</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
@@ -603,11 +602,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
-       "      <td>6</td>\n",
        "      <td>Charter</td>\n",
        "      <td>1858</td>\n",
-       "      <td>1081356</td>\n",
-       "      <td>582.0</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
        "      <td>83.061895</td>\n",
        "      <td>83.975780</td>\n",
        "      <td>94.133477</td>\n",
@@ -616,11 +614,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
-       "      <td>14</td>\n",
        "      <td>Charter</td>\n",
        "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "      <td>638.0</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
        "      <td>83.418349</td>\n",
        "      <td>83.848930</td>\n",
        "      <td>93.272171</td>\n",
@@ -629,11 +626,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pena High School</th>\n",
-       "      <td>9</td>\n",
        "      <td>Charter</td>\n",
        "      <td>962</td>\n",
-       "      <td>585858</td>\n",
-       "      <td>609.0</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
        "      <td>83.839917</td>\n",
        "      <td>84.044699</td>\n",
        "      <td>94.594595</td>\n",
@@ -642,11 +638,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
-       "      <td>4</td>\n",
        "      <td>Charter</td>\n",
        "      <td>1468</td>\n",
-       "      <td>917500</td>\n",
-       "      <td>625.0</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
        "      <td>83.351499</td>\n",
        "      <td>83.816757</td>\n",
        "      <td>93.392371</td>\n",
@@ -655,11 +650,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
-       "      <td>5</td>\n",
        "      <td>Charter</td>\n",
        "      <td>2283</td>\n",
-       "      <td>1319574</td>\n",
-       "      <td>578.0</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
        "      <td>83.274201</td>\n",
        "      <td>83.989488</td>\n",
        "      <td>93.867718</td>\n",
@@ -671,42 +665,42 @@
        "</div>"
       ],
       "text/plain": [
-       "                     School ID School Type  Total Students  \\\n",
-       "Cabrera High School          6     Charter            1858   \n",
-       "Thomas High School          14     Charter            1635   \n",
-       "Pena High School             9     Charter             962   \n",
-       "Griffin High School          4     Charter            1468   \n",
-       "Wilson High School           5     Charter            2283   \n",
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
        "\n",
-       "                     Total School Budget  Per Student Budget  \\\n",
-       "Cabrera High School              1081356               582.0   \n",
-       "Thomas High School               1043130               638.0   \n",
-       "Pena High School                  585858               609.0   \n",
-       "Griffin High School               917500               625.0   \n",
-       "Wilson High School               1319574               578.0   \n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
        "\n",
-       "                     Average Math Score  Average Reading Score  \\\n",
-       "Cabrera High School           83.061895              83.975780   \n",
-       "Thomas High School            83.418349              83.848930   \n",
-       "Pena High School              83.839917              84.044699   \n",
-       "Griffin High School           83.351499              83.816757   \n",
-       "Wilson High School            83.274201              83.989488   \n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
        "\n",
-       "                     % Passing Math  % Passing Reading  % Overall Passing Rate  \n",
-       "Cabrera High School       94.133477          97.039828               95.586652  \n",
-       "Thomas High School        93.272171          97.308869               95.290520  \n",
-       "Pena High School          94.594595          95.945946               95.270270  \n",
-       "Griffin High School       93.392371          97.138965               95.265668  \n",
-       "Wilson High School        93.867718          96.539641               95.203679  "
+       "                     % Overall Passing Rate  \n",
+       "Cabrera High School               95.586652  \n",
+       "Thomas High School                95.290520  \n",
+       "Pena High School                  95.270270  \n",
+       "Griffin High School               95.265668  \n",
+       "Wilson High School                95.203679  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_5_schools = school_summary_df.sort_values([\"% Overall Passing Rate\"], ascending=False)\n",
+    "top_5_schools = display_summary_df.sort_values([\"% Overall Passing Rate\"], ascending=False)\n",
     "top_5_schools = top_5_schools.iloc[0:5, :]\n",
     "del top_5_schools.index.name\n",
     "top_5_schools"
@@ -721,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +739,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>School ID</th>\n",
        "      <th>School Type</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
@@ -760,11 +753,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Rodriguez High School</th>\n",
-       "      <td>11</td>\n",
        "      <td>District</td>\n",
        "      <td>3999</td>\n",
-       "      <td>2547363</td>\n",
-       "      <td>637.0</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
        "      <td>76.842711</td>\n",
        "      <td>80.744686</td>\n",
        "      <td>66.366592</td>\n",
@@ -773,11 +765,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
-       "      <td>1</td>\n",
        "      <td>District</td>\n",
        "      <td>2949</td>\n",
-       "      <td>1884411</td>\n",
-       "      <td>639.0</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
        "      <td>76.711767</td>\n",
        "      <td>81.158020</td>\n",
        "      <td>65.988471</td>\n",
@@ -786,11 +777,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Huang High School</th>\n",
-       "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>655.0</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
        "      <td>76.629414</td>\n",
        "      <td>81.182722</td>\n",
        "      <td>65.683922</td>\n",
@@ -799,11 +789,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Johnson High School</th>\n",
-       "      <td>12</td>\n",
        "      <td>District</td>\n",
        "      <td>4761</td>\n",
-       "      <td>3094650</td>\n",
-       "      <td>650.0</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
        "      <td>77.072464</td>\n",
        "      <td>80.966394</td>\n",
        "      <td>66.057551</td>\n",
@@ -812,11 +801,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ford High School</th>\n",
-       "      <td>13</td>\n",
        "      <td>District</td>\n",
        "      <td>2739</td>\n",
-       "      <td>1763916</td>\n",
-       "      <td>644.0</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
        "      <td>77.102592</td>\n",
        "      <td>80.746258</td>\n",
        "      <td>68.309602</td>\n",
@@ -828,49 +816,42 @@
        "</div>"
       ],
       "text/plain": [
-       "                       School ID School Type  Total Students  \\\n",
-       "Rodriguez High School         11    District            3999   \n",
-       "Figueroa High School           1    District            2949   \n",
-       "Huang High School              0    District            2917   \n",
-       "Johnson High School           12    District            4761   \n",
-       "Ford High School              13    District            2739   \n",
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "Ford High School         District            2739       $1,763,916.00   \n",
        "\n",
-       "                       Total School Budget  Per Student Budget  \\\n",
-       "Rodriguez High School              2547363               637.0   \n",
-       "Figueroa High School               1884411               639.0   \n",
-       "Huang High School                  1910635               655.0   \n",
-       "Johnson High School                3094650               650.0   \n",
-       "Ford High School                   1763916               644.0   \n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "Ford High School                 $644.00           77.102592   \n",
        "\n",
-       "                       Average Math Score  Average Reading Score  \\\n",
-       "Rodriguez High School           76.842711              80.744686   \n",
-       "Figueroa High School            76.711767              81.158020   \n",
-       "Huang High School               76.629414              81.182722   \n",
-       "Johnson High School             77.072464              80.966394   \n",
-       "Ford High School                77.102592              80.746258   \n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "Ford High School                   80.746258       68.309602   \n",
        "\n",
-       "                       % Passing Math  % Passing Reading  \\\n",
-       "Rodriguez High School       66.366592          80.220055   \n",
-       "Figueroa High School        65.988471          80.739234   \n",
-       "Huang High School           65.683922          81.316421   \n",
-       "Johnson High School         66.057551          81.222432   \n",
-       "Ford High School            68.309602          79.299014   \n",
-       "\n",
-       "                       % Overall Passing Rate  \n",
-       "Rodriguez High School               73.293323  \n",
-       "Figueroa High School                73.363852  \n",
-       "Huang High School                   73.500171  \n",
-       "Johnson High School                 73.639992  \n",
-       "Ford High School                    73.804308  "
+       "                       % Passing Reading  % Overall Passing Rate  \n",
+       "Rodriguez High School          80.220055               73.293323  \n",
+       "Figueroa High School           80.739234               73.363852  \n",
+       "Huang High School              81.316421               73.500171  \n",
+       "Johnson High School            81.222432               73.639992  \n",
+       "Ford High School               79.299014               73.804308  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bottom_5_schools = school_summary_df.sort_values([\"% Overall Passing Rate\"])\n",
+    "bottom_5_schools = display_summary_df.sort_values([\"% Overall Passing Rate\"])\n",
     "bottom_5_schools = bottom_5_schools.iloc[0:5, :]\n",
     "del bottom_5_schools.index.name\n",
     "bottom_5_schools"
